# website_erste

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.MD  check_local.ps1  debug_env.py  docker-compose.prod.yml  docker-compose.yml  images.html  index.html  pyproject.toml  requirements-dev.txt  run.py  upload_form.html
.gemini/: style_guide.md
.github/workflows/: cd-release.yml  check-release-source.yml  ci-develop.yml  ci-main.yml  deploy.yml
backend/: README.md  alembic.ini  main.py  requirements.txt  router.py
backend/alembic/: README  env.py
backend/apps/users/: dependencies.py
backend/core/: config.py  database.py  dependencies.py  exceptions.py  logger.py  security.py
backend/core/schemas/: base.py  (+1 more)
backend/dependencies/: auth.py  common.py  media.py
css/: main.css  style.css  styles.css  upload.css
docs/: index.md
docs/backend/: index.md  stack.md
docs/frontend/: api_client.md  index.md
docs/infrastructure/: containers.md  database.md  deployment.md  index.md  runbook.md  setup_ci_cd.md
docs/management/: git_flow.md  index.md  roadmap.md
docs/nginx/: architecture.md  config_spec.md  docker_setup.md  index.md  routing.md
frontend/: images.html  index.html  upload_form.html
frontend/css/: auth.css  gallery.css  main.css  upload.css
frontend/js/: api.js  auth.js  images.js  index.js  storage.js  upload.js
js/: images.js  index.js  storage.js  upload.js
nginx/: .dockerignore  Dockerfile  README.md  nginx-main.conf  nginx.conf  site-local.conf  site.conf
tests/: conftest.py
(+81 files in other folders)
